--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
+/* General styling */
+body {
+  font-family: 'Ubuntu', sans-serif;
+  color: black;
+  background-color: #ffffff;
+  font-size: 30pt;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a{
+  text-decoration: none;
+  transition-duration: 0.4s;
+  color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a:visited{
+  text-decoration: none;
+  color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a:hover{
+  transition: .4s ease-in-out;
+  color: rgb(43, 102, 63);
 }
 
-.App-link {
-  color: #61dafb;
+.page-container{
+  border: 1px solid rgb(0, 0, 0);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.panels-container{
+  border: 2px solid rgb(66, 66, 66);
+  display: grid;
+  column-gap: 5%;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+#weather-panel{
+  border: 5px solid red;
+}
+
+#article-panel{
+  border: 5px solid rgb(0, 255, 255);
+}
+
+#OpenTripMap-panel{
+  border: 5px solid rgb(0, 255, 34);
 }
