--- a/templates/login.html
+++ b/templates/login.html
@@ -1,61 +1,182 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         /* General styling */
         body {
-            font-family: 'Ubuntu', sans-serif;
+            font-family: "Ubuntu", sans-serif;
             color: black;
-            background-color: #ffffff;
+            background-color: #e8e9f3;
             font-size: 30pt;
             text-align: center;
+            margin: 0;
         }
 
-        a{
+        a {
             text-decoration: none;
             transition-duration: 0.4s;
             color: black;
         }
 
-        a:visited{
+        a:visited {
             text-decoration: none;
             color: black;
         }
 
-        a:hover{
-            transition: .4s ease-in-out;
-            color: rgb(43, 102, 63);
+        a:hover {
+            transition: 0.4s ease-in-out;
+            color: #bd0f43;
+        }
+
+        #title {
+            margin: 0 auto;
+            padding-bottom: 2%;
+            display: inline-block;
+            text-decoration: none;
+            font-family: "Dela Gothic One", cursive;
+            font-family: "Sansita Swashed", cursive;
+        }
+
+        .signup-block {
+            font-family: "Dela Gothic One", cursive;
+            margin: 5% auto 0 auto;
+            padding: 1% 0 2% 0;
+            max-width: 66%;
+
+            /*   background-color: #97bc9e;
+            border-radius: 40px;
+            box-shadow: 0px 10px; */
+
+            background: rgba(255, 255, 255, 0.2);
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+            backdrop-filter: blur(8.5px);
+            -webkit-backdrop-filter: blur(8.5px);
+            border-radius: 10px;
+            border: 0px solid rgba(255, 255, 255, 0.18);
+        }
+
+        .signup-block-content {
+            padding: 0 2%;
+        }
+
+        #signup-title {
+            margin-top: 0;
+            font-size: larger;
+        }
+
+        .signup-flashes {
+            color: red;
+            list-style: none;
+            padding: 0;
+            font-size: smaller;
+        }
+
+        #signup-link {
+            color: white;
+            text-decoration: none;
+            transition-duration: 0.4s;
+            margin: 0 auto;
+        }
+
+        .signup-formfield {
+            padding: 3%;
+            border-radius: 1%;
+            margin-bottom: 5%;
+            border-style: none;
+        }
+
+        label {
+            font-size: 22px;
+            padding-right: 1%;
+        }
+
+        ::placeholder {
+            font-size: 15px;
+            vertical-align: baseline;
+        }
+
+        .button {
+            background-color: #000000;
+            font-family: "Dela Gothic One", cursive;
+            border: none;
+            border-radius: 16px;
+            color: white;
+            padding: 15px 30px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 33px;
+            transition-duration: 0.4s;
+        }
+
+        .button:hover {
+            background-color: rgb(37, 87, 54);
+            cursor: pointer;
+            color: white;
+        }
+
+        .wrapper {
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            background: linear-gradient(45deg, #654ea3, #eaafc8);
+            background-size: 600% 100%;
+            animation: gradient 16s linear infinite;
+            animation-direction: alternate;
+        }
+        @keyframes gradient {
+            0% {
+                background-position: 0%;
+            }
+            25% {
+                background-position: 25%;
+            }
+            50% {
+                background-position: 50%;
+            }
+            75% {
+                background-position: 75%;
+            }
+            100% {
+                background-position: 100%;
+            }
         }
     </style> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Sansita+Swashed:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Site Name</title>
+    <title>CitySpit</title>
 </head>
 
 <body>
-
+    <div class="wrapper"></div>
+  
     <a href="/">
-        <h1 id="title">Site Name</h1>
+      <h1 id="title">CitySpit</h1>
     </a>
-
+  
     <div class="signup-block">
-        <p id="signup-title">LOGIN</p>
-
-        <div class="signup-block-content">
-            {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    <ul class="signup-flashes">
-                        {% for message in messages %}
-                            <li>{{ message }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-            {% endwith %}
-            
-            <a id="signup-link" href="/login_post">Login</a>
-        </div>
+      <p id="signup-title">LOGIN</p>
+  
+      <div class="signup-block-content">
+  
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class="signup-flashes">
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+  
+        <a id="signup-link" class="button" href="/login_post">Login</a>
+      </div>
     </div>
-
-</body>
+  
+  </body>
 
 </html>
