--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,140 @@
 /* General styling */
 body {
-  font-family: 'Ubuntu', sans-serif;
-  color: black;
-  background-color: #ffffff;
-  font-size: 30pt;
-  text-align: center;
+	font-family: "Ubuntu", sans-serif;
+	color: black;
+	background-color: #e8e9f3;
+	font-size: 25px;
+	text-align: center;
 }
 
-a{
+a {
+	text-decoration: none;
+	transition-duration: 0.4s;
+	color: black;
+}
+
+a:visited {
+	text-decoration: none;
+	color: black;
+}
+
+a:hover {
+	transition: 0.4s ease-in-out;
+	color: #bd0f43;
+}
+
+#title {
+	padding-bottom: 2%;
+}
+
+/* Panel styling */
+
+.panels-container {
+	display: grid;
+	column-gap: 5%;
+}
+
+#title,
+#panel-title,
+#panel-subheading {
+	font-family: "Dela Gothic One", cursive;
+	font-family: "Sansita Swashed", cursive;
+	text-decoration: none;
+	margin: 0 auto;
+}
+
+#panel-title {
+	font-size: 55px;
+	padding-bottom: 2%;
+}
+
+#panel {
+	margin: 0 auto;
+	padding: 1% 0 2% 0;
+	height: fit-content;
+	max-width: 80%;
+
+	background-color: #97BC9E;
+	box-shadow: 0px 10px;
+	border-radius: 40px;
+}
+
+.grid-container {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
+	gap: 5px 5px;
+	grid-template-areas:
+		"weather-panel weather-panel"
+		"article-panel tripmap-panel";
+}
+
+.weather-panel {
+	border: 5px solid red;
+	grid-area: weather-panel;
+}
+
+.article-panel {
+	border: 5px solid rgb(0, 255, 255);
+	grid-area: article-panel;
+}
+
+.tripmap-panel {
+	border: 5px solid rgb(0, 255, 34);
+	grid-area: tripmap-panel;
+}
+
+#signup-link {
+  color: white;
   text-decoration: none;
   transition-duration: 0.4s;
-  color: black;
+  margin: 0 auto;
 }
 
-a:visited{
+.button {
+  background-color: #000000;
+  font-family: "Dela Gothic One", cursive;
+  border: none;
+  border-radius: 16px;
+  color: white;
+  padding: 15px 30px;
+  text-align: center;
   text-decoration: none;
-  color: black;
+  display: inline-block;
+  font-size: 33px;
+  transition-duration: 0.4s;
 }
 
-a:hover{
-  transition: .4s ease-in-out;
-  color: rgb(43, 102, 63);
+.button:hover {
+  background-color: rgb(37, 87, 54);
+  cursor: pointer;
+  color: white;
 }
 
-.page-container{
-  border: 1px solid rgb(0, 0, 0);
+.wrapper {
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: linear-gradient(45deg, #654ea3, #eaafc8);
+  background-size: 600% 100%;
+  animation: gradient 16s linear infinite;
+  animation-direction: alternate;
 }
-
-
-.panels-container{
-  border: 2px solid rgb(66, 66, 66);
-  display: grid;
-  column-gap: 5%;
-  grid-template-rows: 1fr 1fr 1fr;
-}
-
-#weather-panel{
-  border: 5px solid red;
-}
-
-#article-panel{
-  border: 5px solid rgb(0, 255, 255);
-}
-
-#OpenTripMap-panel{
-  border: 5px solid rgb(0, 255, 34);
+@keyframes gradient {
+  0% {
+    background-position: 0%;
+  }
+  25% {
+    background-position: 25%;
+  }
+  50% {
+    background-position: 50%;
+  }
+  75% {
+    background-position: 75%;
+  }
+  100% {
+    background-position: 100%;
+  }
 }
