--- a/src/App.css
+++ b/src/App.css
@@ -24,14 +24,13 @@ a:hover {
 }
 
 #title {
+	display: inline-block;
 	padding-bottom: 2%;
 }
-
 
 /* Panel styling */
 .panels-container {
 	display: grid;
-	column-gap: 5%;
 }
 
 #title,
@@ -52,166 +51,306 @@ a:hover {
 	padding: 1% 0 2% 0;
 	height: fit-content;
 	max-width: 80%;
-
-	background-color: #E4CCCB;
-	box-shadow: 0px 10px;
-	border-radius: 40px;
+	background: rgba(255, 255, 255, 0.375);
+	box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
+	border-radius: 2rem;
+	border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 .grid-container {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	margin: 0 1%;
+	grid-template-columns: 1.1fr 0.9fr;
 	grid-template-rows: 1fr 1fr;
-	gap: 5px 5px;
+	gap: 0px 0px;
 	grid-template-areas:
-		"article-panel tripmap-panel"
-    "weather-panel like-panel";
+		"citypic-panel like-panel"
+		"info-panels interaction-panels";
 }
 
-/* Weather Styling */
-.weather-panel {
-  margin: 2%;
-  padding: 1%;
-  border-radius: 4px;
-	grid-area: weather-panel;
-}
-#weather-left{
-  text-align: left;
-  font-size: 16px;
-  float: left;
-}
-#weather-icon{
-  font-size: 100px;
-  margin: 3%;
-}
-#temp{
-  margin: 0;
-  font-size: 40px;
-}
-#weather-highlow p{
-  margin: 0;
-  display: inline;
-  font-size: 16px;
-}
-#weather-feels-like{
-  margin: 0;
-  font-size: 20px;
-}
-#weather-desc{
-  margin: 0;
-  font-size: 19px;
-}
-#weather-clouds{
-  margin: 0;
-  font-size: 18px;
-}
-#weather-humidity{
-  margin: 0;
-  font-size: 18px;
+.info-panels {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr;
+	gap: 0px 0px;
+	grid-template-areas: "article-panel tripmap-panel";
+	grid-area: info-panels;
 }
 
+.interaction-panels {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr;
+	gap: 0px 0px;
+	grid-template-areas: "weather-panel userinfo-panel";
+	grid-area: interaction-panels;
+}
 
-#cold{
-  background-color: #4BCFFD;
+/* City Profile pic Styling*/
+.citypic-panel {
+	grid-area: citypic-panel;
 }
-#cool{
-  background-color: #AEEAFF;
-}
-#average{
-  background-color: #89D78D;
-}
-#warm{
-  background-color: #EEC672;
-}
-#hot{
-  background-color: #EE7472;
+#citypic {
+	max-width: 99%;
+	height: fit-content;
+
+	box-shadow: 0 1px 6px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(10.5px);
+	-webkit-backdrop-filter: blur(10.5px);
+	border-radius: 10px;
+	border: 1px solid rgba(0, 0, 0, 0.18);
 }
 
 /* Article Styling */
 .article-panel {
-  margin: 2%;
-  padding: 1%;
-  border-radius: 4px;
-	border: 5px solid rgb(0, 255, 255);
+	margin: 2%;
+	padding: 1%;
+	height: fit-content;
+
+	border-radius: 4px;
+	/*     border: 5px solid rgb(0, 255, 255); */
 	grid-area: article-panel;
+
+	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(10.5px);
+	-webkit-backdrop-filter: blur(10.5px);
+	border-radius: 10px;
+	border: 5px solid rgba(0, 255, 255, 0.18);
 }
 
 /* TripMap Styling */
 .tripmap-panel {
-  margin: 2%;
-  padding: 1%;
-  border-radius: 4px;
-	border: 5px solid rgb(0, 255, 34);
+	margin: 2%;
+	padding: 1%;
+	height: fit-content;
+
+	border-radius: 4px;
+	/*     border: 5px solid rgb(0, 255, 34); */
 	grid-area: tripmap-panel;
+
+	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(10.5px);
+	-webkit-backdrop-filter: blur(10.5px);
+	border-radius: 10px;
+	border: 5px solid rgba(0, 255, 34, 0.18);
+}
+
+/* Weather Styling */
+.weather-panel {
+	margin: 2%;
+	padding: 3%;
+	height: fit-content;
+	grid-area: weather-panel;
+
+	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(10.5px);
+	-webkit-backdrop-filter: blur(10.5px);
+	border-radius: 10px;
+	border: 1px solid rgba(255, 255, 255, 0.18);
+}
+#weather-left {
+	margin-left: 3px;
+	text-align: left;
+	font-size: 16px;
+	float: left;
+}
+#weather-icon {
+	font-size: 100px;
+	margin: 3%;
+}
+#temp {
+	margin: 0;
+	font-size: 40px;
+}
+#weather-highlow p {
+	margin: 0;
+	display: inline;
+	font-size: 16px;
+}
+#weather-feels-like {
+	margin: 0;
+	font-size: 20px;
+}
+#weather-desc {
+	margin: 0;
+	font-size: 19px;
+}
+#weather-clouds {
+	margin: 0;
+	font-size: 18px;
+}
+#weather-humidity {
+	margin: 0;
+	font-size: 18px;
+}
+#cold {
+	background: rgba(109, 169, 244, 0.65);
+}
+#cool {
+	background: rgba(109, 244, 227, 0.65);
+}
+#average {
+	background: rgba(109, 244, 123, 0.65);
+}
+#warm {
+	background: rgba(255, 103, 11, 0.65);
+}
+#hot {
+	background: rgba(255, 0, 0, 0.65);
 }
 
 /* Like/Dislike Styling */
 .like-panel {
-  margin: 2%;
-  padding: 1%;
-  border-radius: 4px;
+	margin: auto;
+	padding: 3%;
+	width: 50%;
+	height: fit-content;
+
 	grid-area: like-panel;
+	box-shadow: 0 1px 6px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(10.5px);
+	-webkit-backdrop-filter: blur(10.5px);
+	border-radius: 10px;
+	border: 1px solid rgba(0, 0, 0, 0.18);
+}
+#dislike-button {
+	margin: 2%;
+
+	background: rgba(255, 255, 255, 0.2);
+	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(4px);
+	-webkit-backdrop-filter: blur(4px);
+	border-radius: 10px;
+	border: 1px solid rgba(255, 255, 255, 0.18);
+}
+#dislike-button:hover {
+	transform: scale(1.11);
+	background: #6a4949;
+	cursor: pointer;
+	color: white;
 }
 
-#profile-pic{
-  max-width: 50px;
-  border-radius: 5%;
+#like-icon {
+	color: red;
 }
 
+#like-button {
+	margin: 2%;
+
+	background: rgba(255, 255, 255, 0.2);
+	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(4px);
+	-webkit-backdrop-filter: blur(4px);
+	border-radius: 10px;
+	border: 1px solid rgba(255, 255, 255, 0.18);
+}
+#like-button:hover {
+	transform: scale(1.11);
+	background: #bd0f43;
+	cursor: pointer;
+	color: white;
+}
+
+#dislike-icon {
+	color: red;
+}
+
+/* UserInfo Styling */
+.userinfo-panel {
+	margin: 2%;
+	padding: 3%;
+	height: fit-content;
+
+	grid-area: userinfo-panel;
+	box-shadow: 0 1px 6px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(10.5px);
+	-webkit-backdrop-filter: blur(10.5px);
+	border-radius: 10px;
+	border: 1px solid rgba(0, 0, 0, 0.18);
+}
+#profile-pic {
+	max-width: 75px;
+	border-radius: 10px;
+	margin: 1%;
+}
 
 /* Button Styling */
-#signup-link {
-  color: white;
-  text-decoration: none;
-  transition-duration: 0.4s;
-  margin: 0 auto;
-}
-
 .button {
-  background-color: #000000;
-  font-family: "Dela Gothic One", cursive;
-  border: none;
-  border-radius: 16px;
-  color: white;
-  padding: 15px 30px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 33px;
-  transition-duration: 0.4s;
-}
+	font-family: "Dela Gothic One", cursive;
+	transition-duration: 0.4s;
+	text-align: center;
+	display: inline-block;
+	font-size: 18px;
+	padding: 3% 5%;
 
+	background: rgba(0, 0, 0, 0.88);
+	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(16px);
+	-webkit-backdrop-filter: blur(16px);
+	border-radius: 10px;
+	border: 1px solid rgba(255, 255, 255, 0.18);
+}
 .button:hover {
-  background-color: rgb(37, 87, 54);
-  cursor: pointer;
-  color: white;
+	background-color: #bd0f43;
+	cursor: pointer;
+	color: white;
+}
+#button-link {
+	color: white;
+	text-decoration: none;
+	transition-duration: 0.4s;
+	margin: 0 auto;
 }
 
 /* Gradient Styling */
 .wrapper {
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: linear-gradient(45deg, #654ea3, #eaafc8);
-  background-size: 600% 100%;
-  animation: gradient 16s linear infinite;
-  animation-direction: alternate;
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	background: linear-gradient(45deg, #d9a7c7, #fffcdc);
+	background-size: 600% 100%;
+	animation: gradient 12s linear infinite;
+	animation-direction: alternate;
 }
 @keyframes gradient {
-  0% {
-    background-position: 0%;
-  }
-  25% {
-    background-position: 25%;
-  }
-  50% {
-    background-position: 50%;
-  }
-  75% {
-    background-position: 75%;
-  }
-  100% {
-    background-position: 100%;
-  }
+	0% {
+		background-position: 0%;
+	}
+	25% {
+		background-position: 25%;
+	}
+	50% {
+		background-position: 50%;
+	}
+	75% {
+		background-position: 75%;
+	}
+	100% {
+		background-position: 100%;
+	}
+}
+
+/* Responsive styling */
+@media screen and (max-width: 950px) {
+	.grid-container {
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-template-rows: max-content;
+		padding: 3% 1%;
+		grid-template-areas:
+			"citypic-panel"
+			"like-panel"
+			"info-panels"
+			"interaction-panels";
+	}
+}
+
+@media screen and (max-width: 400px) {
+	#citypic {
+		max-width: 66%;
+	}
+	#panel {
+		max-width: 100%;
+	}
 }
