Fixed the issue where if you spam clicked the dislike/like button it would crash server. put a 10sec cooldown on the like button to account for that. This concludes the react carousel basic implementation and is ready to be pushed to main for wider use.

--- a/src/App.css
+++ b/src/App.css
@@ -205,6 +205,11 @@ a:hover {
 }
 
 /* Like/Dislike Styling */
+button {
+	cursor: pointer;
+	display: contents;
+}
+
 .like-panel {
 	margin: auto;
 	padding: 3%;
