Fixed positioning of the panel widgets to make it more compact and better organized. Next will work on the loading spinner while the city info is loading.

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,10 +10,10 @@
             font-size: 30px;
             text-align: center;
 
-            background: linear-gradient(45deg, #d9a7c7, #fffcdc);
+            background: linear-gradient(19deg, #d9a7c7, #fffcdc);
             background-size: 600% 100%;
-            animation: gradient 12s linear infinite;
-            animation-direction: alternate;
+            animation: gradient 10s linear infinite;
+            animation-direction: alternate-reverse;
         }
 
         a {
@@ -50,7 +50,7 @@
 
             background: rgba(255, 255, 255, 0.375);
             box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
-            border-radius: 2rem;
+            border-radius: 10px;
             border: 1px solid rgba(255, 255, 255, 0.125);
         }
         .signup-block-content {
