--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,10 @@ body {
 	font-size: 25px;
 	text-align: center;
 
-	background: linear-gradient(45deg, #d9a7c7, #fffcdc);
+	background: linear-gradient(19deg, #d9a7c7, #fffcdc);
 	background-size: 600% 100%;
-	animation: gradient 12s linear infinite;
-	animation-direction: alternate;
+	animation: gradient 10s linear infinite;
+	animation-direction: alternate-reverse;
 }
 
 a {
@@ -58,7 +58,7 @@ a:hover {
 	max-width: 80%;
 	background: rgba(255, 255, 255, 0.375);
 	box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
-	border-radius: 2rem;
+	border-radius: 10px;
 	border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
@@ -69,7 +69,7 @@ a:hover {
 	grid-template-rows: 0.5fr 1fr;
 	gap: 0px 0px;
 	grid-template-areas:
-		"citypic-panel like-panel"
+		"citypic-panel  interaction-panels"
 		"info-panels interaction-panels";
 }
 
@@ -84,10 +84,13 @@ a:hover {
 
 .interaction-panels {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr;
+	grid-template-columns: 1fr;
+	grid-template-rows: .1fr .2fr .5fr;
 	gap: 0px 0px;
-	grid-template-areas: "weather-panel userinfo-panel";
+	grid-template-areas:
+		"like-panel"
+		"weather-panel"
+		"userinfo-panel";
 	grid-area: interaction-panels;
 }
 
@@ -111,9 +114,6 @@ a:hover {
 	margin: 2%;
 	padding: 1%;
 	height: fit-content;
-
-	border-radius: 4px;
-	/*     border: 5px solid rgb(0, 255, 255); */
 	grid-area: article-panel;
 
 	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -128,9 +128,6 @@ a:hover {
 	margin: 2%;
 	padding: 1%;
 	height: fit-content;
-
-	border-radius: 4px;
-	/*     border: 5px solid rgb(0, 255, 34); */
 	grid-area: tripmap-panel;
 
 	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -210,13 +207,28 @@ button {
 	display: contents;
 }
 
+.like-panel-mobile {
+	display: none;
+	margin: auto;
+	padding: 3%;
+	width: 50%;
+	height: fit-content;
+	grid-area: like-panel-mobile;
+
+	box-shadow: 0 1px 6px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(10.5px);
+	-webkit-backdrop-filter: blur(10.5px);
+	border-radius: 10px;
+	border: 1px solid rgba(0, 0, 0, 0.18);
+}
+
 .like-panel {
 	margin: auto;
 	padding: 3%;
 	width: 50%;
 	height: fit-content;
-
 	grid-area: like-panel;
+
 	box-shadow: 0 1px 6px 0 rgba(31, 38, 135, 0.37);
 	backdrop-filter: blur(10.5px);
 	-webkit-backdrop-filter: blur(10.5px);
@@ -340,9 +352,21 @@ button {
 		padding: 3% 1%;
 		grid-template-areas:
 			"citypic-panel"
-			"like-panel"
+			"like-panel-mobile"
 			"info-panels"
 			"interaction-panels";
+	}
+	.interaction-panels {
+		grid-template-rows: none;
+		grid-template-areas:
+			"weather-panel"
+			"userinfo-panel";
+	}
+	.like-panel {
+		display: none;
+	}
+	.like-panel-mobile {
+		display: block;
 	}
 }
 
@@ -354,3 +378,5 @@ button {
 		max-width: 100%;
 	}
 }
+
+/* Carousel */
