Styled the Opentrip map panel for App.js, also fixed a bug where it says list out of range in tripmap api

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,13 @@ body {
 	animation: gradient 12s linear infinite;
 	animation-direction: alternate;
 }
-
+#item {
+	display: inline-block;
+	width: 100px;
+	height: 100px;
+	font-size: x-small;
+	
+  }
 a {
 	text-decoration: none;
 	transition-duration: 0.4s;
