--- a/src/App.css
+++ b/src/App.css
@@ -127,6 +127,7 @@ a:hover {
 	padding: 1%;
 	height: fit-content;
 	grid-area: article-panel;
+	overflow-y: scroll;
 
 	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 	backdrop-filter: blur(10.5px);
