Styled the opentripmap widget

--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,49 @@ a:hover {
 	border-radius: 10px;
 	border: 5px solid rgba(0, 255, 34, 0.18);
 }
+#location-title {
+	font-family: "Sansita Swashed", cursive;
+	font-size: 20px;
+	margin: 5px;
+}
+#location-list {
+	display: grid;
+}
+.loc-list {
+	list-style: none;
+	display: inline-block;
+	padding: 0;
+	margin: 0;
+}
+.loc-list-item {
+	display: flex;
+	padding: 5px;
+	margin: 5px;
+	border-radius: 10px;
+	border: 2px solid rgba(0, 0, 0, 1);
+
+	box-shadow: 0 4px 8px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(5.5px);
+	-webkit-backdrop-filter: blur(5.5px);
+}
+.loc-list-pic {
+	flex-shrink: 0;
+}
+.loc-list-name {
+	margin: auto;
+}
+#loc-name {
+	font-size: 16px;
+	margin: 0;
+	float: left;
+	vertical-align: middle;
+}
+#loc-pic {
+	max-width: 50px;
+	border-radius: 10px;
+	float: right;
+	vertical-align: middle;
+}
 
 /* Weather Styling */
 .weather-panel {
