--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,7 @@ body {
 	animation: gradient 10s linear infinite;
 	animation-direction: alternate-reverse;
 }
-#item {
-	display: inline-block;
-	width: 100px;
-	height: 100px;
-	font-size: x-small;
-	
-  }
+
 a {
 	text-decoration: none;
 	transition-duration: 0.4s;
@@ -39,7 +33,7 @@ a:hover {
 	padding-bottom: 2%;
 }
 .page-container {
-	padding: 0 15%;
+	padding: 0 5%;
 }
 
 /* Panel styling */
@@ -75,7 +69,6 @@ a:hover {
 	display: grid;
 	margin: 0 1%;
 	grid-template-columns: 1.1fr 0.9fr;
-	grid-template-rows: 1fr;
 	gap: 0px 0px;
 	grid-template-areas:
 		"citypic-panel  interaction-panels"
@@ -103,7 +96,7 @@ a:hover {
 	grid-area: interaction-panels;
 }
 
-/* City Profile pic Styling*/
+/* City Profile pic Styling */
 .citypic-panel {
 	grid-area: citypic-panel;
 }
@@ -125,7 +118,9 @@ a:hover {
 	display: block;
 	margin: 2%;
 	padding: 1%;
-	height: fit-content;
+	max-height: 300px;
+	overflow: clip;
+	overflow-y: auto;
 	grid-area: article-panel;
 
 	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -134,13 +129,64 @@ a:hover {
 	border-radius: 10px;
 	border: 5px solid rgba(0, 255, 255, 0.18);
 }
+#article-title {
+	font-family: "Sansita Swashed", cursive;
+	font-size: 20px;
+	margin: 5px;
+}
+#article-list {
+	display: grid;
+}
+.art-list {
+	list-style: none;
+	display: inline-block;
+	padding: 0;
+	margin: 0;
+}
+.art-list-item {
+	display: grid;
+
+	padding: 5px;
+	margin: 5px;
+	border-radius: 10px;
+	border: 2px solid rgba(0, 0, 0, 1);
+
+	box-shadow: 0 4px 8px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(5.5px);
+	-webkit-backdrop-filter: blur(5.5px);
+}
+.art-list-item-contents {
+	width: 100%;
+}
+.art-list-pic {
+	float: left;
+	width: 100%;
+	flex-shrink: 0;
+}
+.art-list-name {
+	float: right;
+	width: 100%;
+	margin: auto;
+}
+#art-name {
+	font-size: 15px;
+	margin: 0;
+	vertical-align: middle;
+}
+#art-pic {
+	max-width: 140px;
+	border-radius: 10px;
+	vertical-align: middle;
+}
 
 /* TripMap Styling */
 .tripmap-panel {
 	display: block;
 	margin: 2%;
 	padding: 1%;
-	height: fit-content;
+	max-height: 300px;
+	overflow: clip;
+	overflow-y: auto;
 	grid-area: tripmap-panel;
 
 	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -181,7 +227,7 @@ a:hover {
 	margin: auto;
 }
 #loc-name {
-	font-size: 16px;
+	font-size: 18px;
 	margin: 0;
 	float: left;
 	vertical-align: middle;
