Added connection between profile page and static page for selected city to be displayed.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -165,11 +165,15 @@
         {% if listLength > 0 %}
         <table>
             <tr>
-                <th>City Name</th>
+                <th>Choose a city to view:</th>
             </tr>
             {% for city in cityList %}
             <tr>
-                <td>{{ city }}</td>
+                <td>
+                    <form action="{{ url_for('Static_City') }}" method="POST">
+                        <input type="submit" value={{city}} name="cityPost">
+                    </form>
+                </td>
             </tr>
             {% endfor %}
         </table>
