working on faster loading

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -254,7 +254,7 @@
                     <br>
 
                     <div class="button">
-                        <a id="button-link" href="/">
+                        <a id="button-link" href="index">
                             Back
                         </a>
                     </div>
