Fixing react thumbnail eorror. fixing database unique key from mehmet. fixing title display, still needs styling

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -241,7 +241,7 @@
                         <tr>
                             <td>
                                 <form class="profile-form" action="{{ url_for('Static_City') }}" method="POST">
-                                    <input class="table-button" type="submit" value={{city}} name="cityPost">
+                                    <input class="table-button" type="submit" value="{{city}}" name="cityPost">
                                 </form>
                             </td>
                         </tr>
