--- a/templates/profile.html
+++ b/templates/profile.html
@@ -171,12 +171,21 @@
             <tr>
                 <td>
                     <form action="{{ url_for('Static_City') }}" method="POST">
-                        <input type="submit" value={{city}} name="cityPost">
+                        <input type="submit" value="{{city}}" name="cityPost">
                     </form>
                 </td>
             </tr>
             {% endfor %}
         </table>
+
+        <form action="{{ url_for('remove') }}" method="POST">
+            <label for="select">Choose a city to remove from your likes list:</label>
+            <select onchange="this.form.submit()" id="select" name="select">
+                {% for city in cityList %}
+                <option value="{{city}}" name='cityRemove'>{{ city }}</option>
+                {% endfor %}
+            </select>
+        </form>
         {% else %}
         <p>Please like cities first to see your saved cities.</p>
         {% endif %}
