--- a/templates/login.html
+++ b/templates/login.html
@@ -53,19 +53,23 @@
             border-radius: 10px;
             border: 1px solid rgba(255, 255, 255, 0.125);
         }
+
         .signup-block-content {
             padding: 0 2%;
         }
+
         #signup-title {
             margin-top: 0;
             font-size: 45px;
         }
+
         .signup-flashes {
             color: red;
             list-style: none;
             padding: 0;
             font-size: smaller;
         }
+
         .signup-formfield {
             padding: 3%;
             border-radius: 1%;
@@ -99,11 +103,13 @@
             border-radius: 10px;
             border: 1px solid rgba(255, 255, 255, 0.18);
         }
+
         .button:hover {
             background-color: #bd0f43;
             cursor: pointer;
             color: white;
         }
+
         #button-link {
             color: white;
             text-decoration: none;
@@ -116,55 +122,82 @@
             0% {
                 background-position: 0%;
             }
+
             25% {
                 background-position: 25%;
             }
+
             50% {
                 background-position: 50%;
             }
+
             75% {
                 background-position: 75%;
             }
+
             100% {
                 background-position: 100%;
             }
         }
-
-    </style> 
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Sansita+Swashed:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Sansita+Swashed:wght@500&display=swap"
+        rel="stylesheet">
     <meta charset="UTF-8">
     <title>CitySpit</title>
 </head>
 
 <body>
     <a href="/">
-      <h1 id="title">CitySpit</h1>
+        <h1 id="title">CitySpit</h1>
     </a>
-  
+
     <div class="signup-block">
-      <p id="signup-title">LOGIN</p>
-  
-      <div class="signup-block-content">
-  
-        {% with messages = get_flashed_messages() %}
+        <p id="signup-title">LOGIN</p>
+
+        <div class="signup-block-content">
+
+            {% with messages = get_flashed_messages() %}
             {% if messages %}
-                <ul class="signup-flashes">
-                    {% for message in messages %}
-                        <li>{{ message }}</li>
-                    {% endfor %}
-                </ul>
+            <ul class="signup-flashes">
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
             {% endif %}
-        {% endwith %}
-  
-        <div class="button">
-            <a id="button-link" href="/login_post">Login</a>
+            {% endwith %}
+
+            <div class="button">
+                <a id="button-link" href="/login_post">Login</a>
+            </div>
         </div>
-      </div>
     </div>
-  
-  </body>
+
+    <div>
+        <h2>Functionality</h2>
+        <p>Our app will provide brief real time information about the random cities.
+            Information will include attractions to visit, news updates, and weather
+            information about the cities. User will be able to save the cities based
+            on interests. Later by accessing the liked list users will be ready to
+            experience new adventures and have easy planning to favorite cities.</p>
+    </div>
+
+    <div>
+        <h2>Purpose</h2>
+        <p>Our app allows users to find new experiences randomly, which open doors
+            to new adventures and new activities. Our goal is to deliver users
+            informative platform to save time and plan their future travel easily.</p>
+    </div>
+
+    <div>
+        <h2>Creators</h2>
+        <p>Ahmed Mustafa @amdMUST</p>
+        <p>Joan Galicia @Jgalicia2</p>
+        <p>Michael Dinh @mdinh5</p>
+        <p>Mehmet Filik @mfilik</p>
+    </div>
+</body>
 
 </html>
