--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,6 @@
 
 <head>
     <style>
-        /* General Styling */
         body {
             font-family: "Ubuntu", sans-serif;
             color: black;
@@ -42,15 +41,22 @@
         }
 
         .signup-block {
-            margin: 5% auto 0 auto;
+            animation-name: floating;
+            animation-duration: 3s;
+            animation-iteration-count: infinite;
+            animation-timing-function: ease-in-out;
+
+            margin: 2% auto 0 auto;
             padding: 1% 0 2% 0;
             max-width: 66%;
             align-items: center;
+            border-radius: 10px;
 
             background: rgba(255, 255, 255, 0.375);
             box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
             border: 1px solid rgba(255, 255, 255, 0.125);
+            backdrop-filter: blur(16px);
+            -webkit-backdrop-filter: blur(16px);
         }
 
         .signup-block-content {
@@ -98,7 +104,22 @@
         }
         .info {
             font-weight: 700;
+            padding: 0 5%;
             margin: 1%;
+        }
+
+        .giphy {
+            margin: 0 auto;
+            max-width: 50%;
+            position: relative;
+        }
+        .giphy-embed {
+            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.375);
+            box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
+            border: 1px solid rgba(0, 0, 0, 0.125);
+            backdrop-filter: blur(16px);
+            -webkit-backdrop-filter: blur(16px);
         }
 
         /* Button Styling */
@@ -153,6 +174,39 @@
                 background-position: 100%;
             }
         }
+
+        /* animation found on https://www.geeksforgeeks.org/css-floating-animation/ */
+
+        @keyframes floating {
+            0% {
+                transform: translate(0, 0px);
+            }
+            50% {
+                transform: translate(0, 15px);
+            }
+            100% {
+                transform: translate(0, -0px);
+            }
+        }
+
+        /* Responsive styling */
+        @media screen and (max-width: 700px) {
+            .giphy-embed {
+                max-width: 70%;
+            }
+        }
+
+        @media screen and (max-width: 600px) {
+            .giphy-embed {
+                max-width: 60%;
+            }
+        }
+
+        @media screen and (max-width: 500px) {
+            .giphy-embed {
+                max-width: 50%;
+            }
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -165,26 +219,32 @@
 
 <body>
     <a href="/">
-        <h1 id="title">CitySpit</h1>
-    </a>
+		<h1 id="title">CitySpit</h1>
+	</a>
 
-    <div class="signup-block">
-        <div class="signup-block-content">
-            <div id="app-info">
+	<div class="signup-block">
+		<div class="signup-block-content">
+			<div id="app-info">
 
-                <div>
-					<h4 class="subheading">Functionality</h4>
-					<p class="info">Our app will provide brief real time information about the random cities.
-						Information will include attractions to visit, news updates, and weather
-						information about the cities. User will be able to save the cities based
-						on interests. Later by accessing the liked list users will be ready to
-						experience new adventures and have easy planning to favorite cities.</p>
+				<div>
+
+					<div class="giphy">
+						<img src="https://media4.giphy.com/media/3ohze1JslWBrRxa3Dy/giphy.gif?cid=790b7611e45cc7eacb22fb82a4badd1303e2092f60099a44&rid=giphy.gif&ct=g" frameBorder="0" class="giphy-embed"></img>
+					</div>
+
+					<h4 class="subheading">About</h4>
+					<p class="info">
+						CitySpit is an app which provides real time information about a random citiy in a fun dating-app way.
+						Information including attractions to visit, news updates, and current weather stats.
+						You will be able to see many cities and decide if you like or dislike the city based on your priorities.
+						You will be able to visit the city again at any time!
+					</p>
 				</div>
 
 				<div>
 					<h4 class="subheading">Purpose</h4>
 					<p class="info">Our app allows users to find new experiences randomly, which open doors
-						to new adventures and new activities. Our goal is to deliver users
+						to new adventures and new activities. Our goal is to deliver users an
 						informative platform to save time and plan their future travel easily.</p>
 				</div>
 
@@ -196,25 +256,14 @@
 					<p class="info">Mehmet Filik @mfilik</p>
 				</div>
 
-            </div>
+			</div>
 
-            <br>
-
-            <div class="button">
-                <a id="button-link" href="/login_post">Login</a>
-            </div>
-
-            {% with messages = get_flashed_messages() %}
-            {% if messages %}
-            <ul class="signup-flashes">
-                {% for message in messages %}
-                <li>{{ message }}</li>
-                {% endfor %}
-            </ul>
-            {% endif %}
-            {% endwith %}
-        </div>
-    </div>
+			<br>
+			<div class="button">
+				<a id="button-link" href="/login_post">Login with Google</a>
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
